# Easy-Manage-Skills

./: .gitignore  README.md  pyproject.toml
src/skills_manager/: __init__.py  cli.py  core.py  web.py
src/skills_manager/static/: app.css  app.js  index.html
tests/: test_cli.py  test_core.py  test_web.py
