[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-skills-manager"
version = "0.1.0"
description = "Synchronize complete skill folders from a central library to local agents."
requires-python = ">=3.10"

[project.scripts]
skills-manager = "skills_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skills_manager = ["static/*"]
